Fix example & scrollbar style

--- a/cssImporter/myCss.css
+++ b/cssImporter/myCss.css
@@ -145,16 +145,20 @@ flex-flow: row;
       flex: 1 1 auto;
   }
 
-  ::-webkit-scrollbar{
+::-webkit-scrollbar{
     width: 14px;
-    height: 10px;
-    }
+}
 
-    ::-webkit-scrollbar-thumb {
-        height: 6px;
-        border: 4px solid rgba(0, 0, 0, 0);
-        background-clip: padding-box;
-        border-radius: 7px;
-        -webkit-border-radius: 7px;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
+::-webkit-scrollbar-thumb {
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+/* ::-webkit-scrollbar-thumb{ background-color: #CCC; } 
+::-webkit-scrollbar-thumb:hover{ background-color: #0000ff; } 
+::-webkit-scrollbar-track{ background-color: rgba(0,0,0,0); } 
+::-webkit-scrollbar{ width: 13px; } */
